--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend for AI Therapy Agent",
   "main": "dist/index.js",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "ts-node src/index.ts",
     "dev": "node src/index.js",
     "build": "tsc",
     "test": "jest"
