--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "dev": "node src/index.js",
-    "build": "tsc",
+    "build": "node ./node_modules/typescript/bin/tsc -p tsconfig.json",
     "test": "jest"
   },
   "dependencies": {
